<resources>
    <string name="app_name">Street Vendor Helper</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="login_required">Login required</string>
    <string name="login_required_feedback">Please login to provide feedback</string>
    <string name="login_required_new_event">Please login to create new event</string>
    <string name="login_required_delete_event">Please login to delete event</string>
    <string name="login_required_photo">Please login to upload photos</string>
    <string name="login_required_edit">Please login to edits</string>
    <string name="pick_single">Please select your image</string>

    <string-array name="types">
        <item>Arts &amp; Craft</item>
        <item>Commerce</item>
        <item>Farmers Market</item>
        <item>Food &amp; Beverages</item>
        <item>Flea Market</item>
        <item>Other</item>
    </string-array>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string-array name="states">
        <item>Other</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Marianas Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string name="facebook_application_id">301694723685362</string>
    <string name="fb_login_protocol_scheme">fb301694723685362</string>
    <string name="rate_this_event">Rate this event!!!</string>
    <string name="street_vendor_helper">Street Vendor Helper</string>
    <string name="select_location">Select Location</string>
    <string name="event_name">Event name</string>
    <string name="event_type">Event type</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="contact">Contact</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="your_name">Your name</string>
    <string name="frequency">Frequency</string>
    <string name="comment">Comment</string>
    <string name="rating">Rating</string>
    <string name="enter_comment">Enter your comment here</string>
    <string name="save">Save</string>
    <string name="reviews">Reviews</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="united_states">United States</string>
    <string name="act_new">New</string>
    <string name="delete">Delete</string>
    <string name="act_edit">Edit</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
