<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/border"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    >

    <TextView
            android:id="@+id/name"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginStart="@dimen/common_margin" android:layout_marginEnd="@dimen/common_margin"
            android:layout_marginBottom="@dimen/common_margin"/>

    <com.willy.ratingbar.ScaleRatingBar
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/common_margin"
            app:srb_numStars="5"
            app:srb_minimumStars="0"
            app:srb_rating="0"
            app:srb_starWidth="12dp"
            app:srb_starHeight="15dp"
            app:srb_starPadding="1dp"
            app:srb_stepSize="0.5"
            app:srb_isIndicator="false"
            app:srb_clickable="false"
            app:srb_scrollable="true"
            app:srb_clearRatingEnabled="true"
            app:srb_drawableEmpty="@drawable/empty_star"
            app:srb_drawableFilled="@drawable/gold_star">
    </com.willy.ratingbar.ScaleRatingBar>


    <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/common_margin" android:layout_marginStart="@dimen/common_margin"
            android:layout_marginEnd="@dimen/common_margin" android:layout_marginBottom="@dimen/common_margin"/>

    <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/common_margin" android:layout_marginStart="@dimen/common_margin"
            android:layout_marginEnd="@dimen/common_margin" android:layout_marginBottom="@dimen/common_margin"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:scaleType="centerCrop"
        android:layout_below="@+id/name"
        android:layout_above="@+id/reviews"
        />

</RelativeLayout>
